# Wordle_Solver

./: .gitignore  Cargo.toml  README.md  k.py
src/: answers.csv  engine.rs  final.csv  main.rs
