[package]
name = "wordle_solver"
version = "0.1.0"
edition = "2024"
authors = ["Kanishk Jain"]
description = "A high-performance, parallelized Wordle solver using Shanon entropy"

[dependencies]
csv = "1.4.0"
rayon = "1.11.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
